--- a/src/main/resources/com/example/xml/main-view.fxml
+++ b/src/main/resources/com/example/xml/main-view.fxml
@@ -8,62 +8,44 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.xml.Controller">
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xml.Controller">
     <children>
         <VBox HBox.hgrow="ALWAYS">
             <children>
-                <TextArea fx:id="mainTextArea" onKeyTyped="#onTextChanged" VBox.vgrow="ALWAYS"/>
+                <TextArea fx:id="mainTextArea" onKeyTyped="#onTextChanged" VBox.vgrow="ALWAYS" />
                 <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0" VBox.vgrow="SOMETIMES">
                     <children>
-                        <TextField fx:id="browseTextField" editable="false" maxWidth="1.7976931348623157E308"
-                                   prefWidth="413.0" HBox.hgrow="ALWAYS"/>
-                        <Button mnemonicParsing="false" onAction="#xmlFileChooser" prefHeight="26.0" prefWidth="155.0"
-                                text="Browse">
+                        <TextField fx:id="browseTextField" editable="false" maxWidth="1.7976931348623157E308" prefWidth="413.0" HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false" onAction="#xmlFileChooser" prefHeight="26.0" prefWidth="155.0" text="Browse">
                             <HBox.margin>
-                                <Insets left="5.0"/>
+                                <Insets left="5.0" />
                             </HBox.margin>
                         </Button>
                     </children>
                     <VBox.margin>
-                        <Insets top="5.0"/>
+                        <Insets top="5.0" />
                     </VBox.margin>
                 </HBox>
             </children>
         </VBox>
         <VBox alignment="CENTER" prefWidth="155.0" spacing="20.0">
             <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onMinifyClick"
-                    text="Minify" VBox.vgrow="ALWAYS"/>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#compress"
-                    text="Compress" VBox.vgrow="ALWAYS"/>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#decompress"
-                    text="Decompress" VBox.vgrow="ALWAYS"/>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onValidateClick"
-                    text="Validate" VBox.vgrow="ALWAYS"/>
-            <Button fx:id="fixErrorsButton" disable="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" onAction="#onFixErrorsClick" text="Fix Errors"
-                    VBox.vgrow="ALWAYS"/>
-            <Button fx:id="formatButton" disable="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" onAction="#onFormatClick" text="Format" VBox.vgrow="ALWAYS"/>
-            <Button fx:id="networkAnalysisButton" disable="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" onAction="#onHelloButtonClick" text="Network Analysis"
-                    VBox.vgrow="ALWAYS"/>
-            <Button fx:id="postSearchButton" disable="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" onAction="#onHelloButtonClick" text="Post Search"
-                    VBox.vgrow="ALWAYS"/>
-            <Button fx:id="convertToJsonButton" disable="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308" onAction="#onConvertToJsonClick" text="Convert To JSON"
-                    VBox.vgrow="ALWAYS"/>
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onMinifyClick" text="Minify" VBox.vgrow="ALWAYS" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#compress" text="Compress" VBox.vgrow="ALWAYS" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#decompress" text="Decompress" VBox.vgrow="ALWAYS" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onValidateClick" text="Validate" VBox.vgrow="ALWAYS" />
+            <Button fx:id="fixErrorsButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onFixErrorsClick" text="Fix Errors" VBox.vgrow="ALWAYS" />
+            <Button fx:id="formatButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onFormatClick" text="Format" VBox.vgrow="ALWAYS" />
+            <Button fx:id="networkAnalysisButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onNetworkAnalysisClick" text="Network Analysis" VBox.vgrow="ALWAYS" />
+            <Button fx:id="postSearchButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onSearchPostClick" text="Post Search" VBox.vgrow="ALWAYS" />
+            <Button fx:id="convertToJsonButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onConvertToJsonClick" text="Convert To JSON" VBox.vgrow="ALWAYS" />
 
-            <Label fx:id="labelText" alignment="CENTER" maxHeight="1.7976931348623157E308"
-                   maxWidth="1.7976931348623157E308"/>
+            <Label fx:id="labelText" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
         </VBox>
     </children>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
 </HBox>
