--- a/src/main/resources/com/example/xml/network-analysis-view.fxml
+++ b/src/main/resources/com/example/xml/network-analysis-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="640.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="640.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xml.Controller">
     <HBox.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </HBox.margin>
@@ -14,15 +14,15 @@
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
    <children>
-      <Label fx:id="welcomeText" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="178.0" prefWidth="620.0" />
+      <Label fx:id="resultLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="178.0" prefWidth="620.0" />
       <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0">
          <children>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" text="Get most Influencer user" HBox.hgrow="ALWAYS">
+            <Button fx:id="mostInfButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onMostInfClick" prefHeight="26.0" prefWidth="155.0" text="Most Influencer User" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="26.0" prefWidth="155.0" text="Get the most active user" HBox.hgrow="ALWAYS">
+            <Button fx:id="mostActiveButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onMostActiveClick" prefHeight="26.0" prefWidth="155.0" text="Most Active User" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -37,12 +37,12 @@
       </HBox>
       <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0">
          <children>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="25.0" prefWidth="299.0" text="the mutual followers between two users" HBox.hgrow="ALWAYS">
+            <Button fx:id="mutualButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onMutualFollowersClick" prefHeight="25.0" prefWidth="299.0" text="Mutual Followers Between Two Users" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="25.0" prefWidth="300.0" text="suggested users list" HBox.hgrow="ALWAYS">
+            <Button fx:id="suggestButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSuggestButtonClick" prefHeight="25.0" prefWidth="300.0" text="Suggested Users" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
