--- a/src/main/resources/com/example/xml/search-input-window.fxml
+++ b/src/main/resources/com/example/xml/search-input-window.fxml
@@ -18,7 +18,7 @@
    <children>
       <HBox prefHeight="19.0" prefWidth="433.0">
          <children>
-            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="37.0" prefWidth="131.0" text="Enter First User ID" HBox.hgrow="ALWAYS">
+            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="37.0" prefWidth="131.0" text="Enter Search Word" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
@@ -29,20 +29,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox prefHeight="19.0" prefWidth="433.0">
-         <children>
-            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="37.0" prefWidth="131.0" text="Enter Second User ID" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets right="5.0" />
-               </HBox.margin>
-            </Label>
-            <TextField fx:id="inputTextField2" HBox.hgrow="ALWAYS" />
-         </children>
-         <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </VBox.margin>
-      </HBox>
-      <TextArea fx:id="resultText" editable="false" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <TextArea fx:id="resultText" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
@@ -53,7 +40,7 @@
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
             <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="131.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="okButton" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onOkClick" prefHeight="26.0" prefWidth="120.0" text="OK" HBox.hgrow="ALWAYS">
+            <Button fx:id="okButton" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onPostOkClick" prefHeight="26.0" prefWidth="120.0" text="OK" HBox.hgrow="ALWAYS">
                <HBox.margin>
                   <Insets top="10.0" />
                </HBox.margin>
