--- a/src/main/resources/com/example/xml/json-output-view.fxml
+++ b/src/main/resources/com/example/xml/json-output-view.fxml
@@ -6,30 +6,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0"
-      prefWidth="640.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.xml.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xml.Controller">
     <children>
-        <TextArea fx:id="jsonOutputTextArea" editable="false" VBox.vgrow="ALWAYS"/>
+        <TextArea fx:id="jsonOutputTextArea" editable="false" VBox.vgrow="ALWAYS" />
         <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0" VBox.vgrow="SOMETIMES">
             <children>
-                <Button fx:id="exportJsonToFileButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onExportToJsonFileClick" prefHeight="26.0" prefWidth="155.0" text="Export to File"
-                        HBox.hgrow="ALWAYS">
+                <Button fx:id="exportJsonToFileButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onExportToJsonFileClick" prefHeight="26.0" prefWidth="155.0" text="Export to File" HBox.hgrow="ALWAYS">
                     <HBox.margin>
-                        <Insets left="5.0"/>
+                        <Insets />
                     </HBox.margin>
                 </Button>
             </children>
             <VBox.margin>
-                <Insets top="5.0"/>
+                <Insets top="5.0" />
             </VBox.margin>
         </HBox>
     </children>
     <HBox.margin>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </HBox.margin>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
 </VBox>
