--- a/src/main/resources/com/example/xml/network-analysis-view.fxml
+++ b/src/main/resources/com/example/xml/network-analysis-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="640.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xml.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="470.0" HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xml.Controller">
     <HBox.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </HBox.margin>
@@ -14,7 +14,7 @@
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
    <children>
-      <Label fx:id="resultLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="178.0" prefWidth="620.0" />
+      <Label fx:id="resultLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="178.0" prefWidth="620.0" textAlignment="CENTER" />
       <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0">
          <children>
             <Button fx:id="mostInfButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onMostInfClick" prefHeight="26.0" prefWidth="155.0" text="Most Influencer User" HBox.hgrow="ALWAYS">
