--- a/src/main/resources/com/example/xml/main-view.fxml
+++ b/src/main/resources/com/example/xml/main-view.fxml
@@ -28,7 +28,7 @@
                 </HBox>
             </children>
         </VBox>
-        <VBox alignment="CENTER" prefWidth="155.0" spacing="20.0">
+        <VBox alignment="CENTER" prefWidth="155.0" spacing="15.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
@@ -41,6 +41,20 @@
             <Button fx:id="networkAnalysisButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onNetworkAnalysisClick" text="Network Analysis" VBox.vgrow="ALWAYS" />
             <Button fx:id="postSearchButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onSearchPostClick" text="Post Search" VBox.vgrow="ALWAYS" />
             <Button fx:id="convertToJsonButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onConvertToJsonClick" text="Convert To JSON" VBox.vgrow="ALWAYS" />
+            <HBox>
+                <children>
+                    <Button fx:id="saveButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#onSaveClick" text="Save" HBox.hgrow="ALWAYS">
+                        <HBox.margin>
+                            <Insets right="2.0" />
+                        </HBox.margin>
+                    </Button>
+                    <Button fx:id="saveAsButton" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" onAction="#onSaveAsClick" text="Save As" HBox.hgrow="ALWAYS">
+                        <HBox.margin>
+                            <Insets left="2.0" />
+                        </HBox.margin>
+                    </Button>
+                </children>
+            </HBox>
 
             <Label fx:id="labelText" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
         </VBox>
